--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "react-former-package",
+  "name": "@sajith-pj/react-former",
   "version": "0.1.0",
-  "private": true,
   "main": "dist/index.js",
   "files": [
     "dist/"
